--- a/optimset.bib
+++ b/optimset.bib
@@ -6,6 +6,7 @@
     year         = 2006,
     journal      = {SIAM J. Optim.},
     volume       = 17,
+    number       = 1,
     pages        = {188--217},
 }
 
@@ -23,6 +24,7 @@
     year         = 1999,
     journal      = {Struct. Multidiscip. Optim.},
     volume       = 17,
+    number       = 1,
     pages        = {1--13},
 }
 
@@ -57,7 +59,8 @@
     author       = {Dennis, Jr., J. E. and Schnabel, R. B.},
     year         = 1979,
     journal      = {SIAM Rev.},
-    volume       = 4,
+    volume       = 21,
+    number       = 4,
     pages        = {443--459},
 }
 
@@ -66,8 +69,6 @@
     author       = {Eldred, J. S. and Larson, J. and Padidar, M. and Stern, E. and Wild, S. M.},
     year         = 2022,
     journal      = {Optim. Eng.},
-    volume       = 124,
-    pages        = {1--27},
 }
 
 @inproceedings{Gazaix_Etal_2019,
@@ -93,6 +94,7 @@
     year         = 1961,
     journal      = {J. ACM},
     volume       = 8,
+    number       = 2,
     pages        = {212--229},
 }
 
@@ -102,6 +104,7 @@
     year         = 2003,
     journal      = {SIAM Rev.},
     volume       = 45,
+    number       = 3,
     pages        = {385--482},
 }
 
@@ -120,7 +123,8 @@
     year         = 2017,
     journal      = {ACM Trans. Math. Software},
     volume       = 44,
-    pages        = {6:1--6:25},
+    number       = 1,
+    pages        = 6,
 }
 
 @article{Porcelli_Toint_2022,
@@ -129,6 +133,7 @@
     year         = 2022,
     journal      = {ACM Trans. Math. Software},
     volume       = 48,
+    number       = 1,
     pages        = {1--25},
 }
 
@@ -149,6 +154,7 @@
     year         = 2002,
     journal      = {Math. Program.},
     volume       = 92,
+    number       = 3,
     pages        = {555--582},
 }
 
@@ -178,6 +184,7 @@
     year         = 2013,
     journal      = {Math. Program.},
     volume       = 138,
+    number       = {1--2},
     pages        = {475--500},
 }
 
@@ -187,6 +194,7 @@
     year         = 2021,
     journal      = {Front. Comput. Sci.},
     volume       = 15,
+    number       = 6,
     pages        = 156336,
 }
 
